--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -31,6 +31,9 @@
         </div>
         <div id="bottom">
             <ui:insert name="bottom">Bottom</ui:insert>
+            <h:form>
+                <h:commandButton action="jsf/paieEtape1.xhtml" value="test page paiement" />
+            </h:form>
         </div>
 
     </h:body>
