--- a/web/jsf/paieEtape1.xhtml
+++ b/web/jsf/paieEtape1.xhtml
@@ -63,7 +63,7 @@
         </div>
         <div id="bottomPaie">
             <h:form>
-                <h:commandButton action="/index.xhtml" value="retour à l'index" />
+                <h:link outcome="/index.xhtml" value="retour a l'index" />
             </h:form>
         </div>
     </h:body>
