--- a/web/jsf/creationCompte.xhtml
+++ b/web/jsf/creationCompte.xhtml
@@ -1,29 +1,39 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+    
     <h:head>
-        <title>Facelet Title</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link href="resources/css/default.css" rel="stylesheet" type="text/css" />
+        <link href="resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
+        <title>Creer un compte</title>
     </h:head>
     <h:body>
-        <!--Hello from Facelets-->
-        <!--<form method="post" action="../servlet/FormCreateServlet">-->
-<!--            Prénom: <input type="text" name="firstName" /> <br />
-            Nom: <input type="text" name="lastName" /> <br />
-            Entrez votre adresse email: <input type="text" name="email" /> <br />
-            Confirmez votre adresse email: <input type="text" name="confirmEmail" /> <br />
-            Entrez votre mot de passe: <input type="password" name="password" /> <br />
-            Confirmez votre mot de passe: <input type="password" name="confirmPassword" /> <br />
-            <input type="submit" value="Créer mon compte" />-->
-        <h:form>
-             Prénom: <h:inputText value="#{UserView.user.prenom}"/> <br />
-             Nom: <h:inputText value="#{UserView.user.nom}" /> <br />
-             Entrez votre adresse email: <h:inputText value="#{UserView.user.mail}"/> <br />
-             Confirmez votre adresse email: <h:inputText value="a" /> <br />
-             Entrez votre mot de passe: <h:inputSecret value="#{UserView.user.hashPassword}" /> <br />
-             Confirmez votre mot de passe: <h:inputSecret value="a" /> <br />
-             <h:commandButton action="#{UserView.createAccount}" value="Créer mon compte" />
-         </h:form>
+        <div id="top">
+            <ui:include src="../template/top.xhtml"/>
+        </div>
+        <div id="content" class="center_content">
+            <h:form>
+                <label>Prénom: </label><h:inputText required="true" id="prenom" value="#{UserView.user.prenom}">
+                    <f:validateRequired for="prenom"/></h:inputText>
+                    <h:message showSummary="true" showDetail="false" id="prenomErreur" for="prenom" styleClass="erreurSaisie"/><br />
+                <label>Nom: </label><h:inputText required="true" id="nom" value="#{UserView.user.nom}">
+                    <f:validateRequired for="nom"/></h:inputText>
+                    <h:message showSummary="true" showDetail="false" id="nomErreur" for="nom" styleClass="erreurSaisie"/><br />
+                <label>Entrez votre adresse email: </label><h:inputText required="true" id="mail2" value="#{UserView.user.mail}">
+                    <f:validateRequired for="mail2"/></h:inputText>
+                    <h:message showSummary="true" showDetail="false" id="mail2Erreur" for="mail2" styleClass="erreurSaisie"/><br />
+                <label>Confirmez votre adresse email: </label><h:inputText value="a" /> <br />
+                <label>Entrez votre mot de passe: </label><h:inputSecret required="true" id="password2" value="#{UserView.user.hashPassword}">
+                    <f:validateRequired for="password2"/></h:inputSecret>
+                    <h:message showSummary="true" showDetail="false" id="password2Erreur" for="password2" styleClass="erreurSaisie"/><br />
+                <label>Confirmez votre mot de passe: </label><h:inputSecret value="a" /> <br />
+                <h:commandButton action="#{UserView.createAccount}" value="Créer mon compte" />
+            </h:form>
+        </div>
         <h:link value="Retour à l'acceuil" outcome="/index.xhtml"/> <br /> 
     </h:body>
 </html>
