--- a/web/jsf/paieEtape1.xhtml
+++ b/web/jsf/paieEtape1.xhtml
@@ -33,30 +33,30 @@
             <div id="rightPaie">
                 <h2>Connectez vous</h2>
                 <h:form>
-                    Entrez votre adresse email: <h:inputText required="true" id="mail" value="#{UserView.user.mail}">
+                    <label>Entrez votre adresse email: </label><h:inputText required="true" id="mail" value="#{UserView.user.mail}">
                         <f:validateRequired for="mail"/></h:inputText>
                         <h:message showSummary="true" showDetail="false" id="mailErreur" for="mail" styleClass="erreurSaisie"/><br />
-                    Entrez votre mot de passe: <h:inputSecret required="true" id="password" value="#{UserView.user.hashPassword}">
+                        <label>Entrez votre mot de passe: </label><h:inputSecret required="true" id="password" value="#{UserView.user.hashPassword}">
                         <f:validateRequired for="password"/></h:inputSecret>
                         <h:message showSummary="true" showDetail="false" id="passwordErreur" for="password" styleClass="erreurSaisie"/><br />
                     <h:commandButton action="#{UserView.findAccount}" value="Se connecter" />    
                 </h:form>
                 <h2>Creez votre compte</h2>
                 <h:form>
-                    Prénom: <h:inputText required="true" id="prenom" value="#{UserView.user.prenom}">
+                    <label>Prénom: </label><h:inputText required="true" id="prenom" value="#{UserView.user.prenom}">
                         <f:validateRequired for="prenom"/></h:inputText>
                         <h:message showSummary="true" showDetail="false" id="prenomErreur" for="prenom" styleClass="erreurSaisie"/><br />
-                    Nom: <h:inputText required="true" id="nom" value="#{UserView.user.nom}">
+                    <label>Nom: </label><h:inputText required="true" id="nom" value="#{UserView.user.nom}">
                         <f:validateRequired for="nom"/></h:inputText>
                         <h:message showSummary="true" showDetail="false" id="nomErreur" for="nom" styleClass="erreurSaisie"/><br />
-                    Entrez votre adresse email: <h:inputText required="true" id="mail2" value="#{UserView.user.mail}">
+                    <label>Entrez votre adresse email: </label><h:inputText required="true" id="mail2" value="#{UserView.user.mail}">
                         <f:validateRequired for="mail2"/></h:inputText>
                         <h:message showSummary="true" showDetail="false" id="mail2Erreur" for="mail2" styleClass="erreurSaisie"/><br />
-                    Confirmez votre adresse email: <h:inputText value="a" /> <br />
-                    Entrez votre mot de passe: <h:inputSecret required="true" id="password2" value="#{UserView.user.hashPassword}">
+                    <label>Confirmez votre adresse email: </label><h:inputText value="a" /> <br />
+                    <label>Entrez votre mot de passe: </label><h:inputSecret required="true" id="password2" value="#{UserView.user.hashPassword}">
                         <f:validateRequired for="password2"/></h:inputSecret>
                         <h:message showSummary="true" showDetail="false" id="password2Erreur" for="password2" styleClass="erreurSaisie"/><br />
-                    Confirmez votre mot de passe: <h:inputSecret value="a" /> <br />
+                    <label>Confirmez votre mot de passe: </label><h:inputSecret value="a" /> <br />
                     <h:commandButton action="#{UserView.createAccount}" value="Créer mon compte" />
                 </h:form>
             </div>
