Ajout de la connexion et de la deconnexion + changement du top en fonction de si l'user est connecté ou nom

--- a/web/jsf/paieEtape1.xhtml
+++ b/web/jsf/paieEtape1.xhtml
@@ -20,14 +20,14 @@
             </div>
         
             <div id="topRight">
-                Compte -> Adresse -> Paiement -> Confirmation
+                <strong>Compte</strong> -> Adresse -> Paiement -> Confirmation
             </div> 
         </div>
         <div>
             <div id="leftPaie">
                 <h2>Commander sans compte</h2>
                 <h:form>
-                    <h:commandButton action="null" value="Valider" />
+                    <h:commandButton action="paieEtape2.xhtml" value="Valider" />
                 </h:form>
             </div>
             <div id="rightPaie">
