--- a/web/jsf/paieEtape2.xhtml
+++ b/web/jsf/paieEtape2.xhtml
@@ -25,8 +25,9 @@
         </div>
         <div>
             <div id="leftPaie">
-                <h2>Commander sans compte</h2>
+                <h2>Vos adresses</h2>
                 <h:form>
+                    
                     <h:commandButton action="null" value="Valider" />
                 </h:form>
             </div>
