--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -36,6 +36,7 @@
             </h:form>
         </div>
 
+        <h:link outcome="welcomeGWT.html" value="Mon compte" />
     </h:body>
 
 </html>
