--- a/web/welcomeGWT.html
+++ b/web/welcomeGWT.html
@@ -6,12 +6,15 @@ lead to some differences in layout.
 -->
 <html>
     <head>
-        <meta name='gwt:module' content='org.yournamehere.Main=org.yournamehere.Main'>
+        <!--<meta name='gwt:module' content='org.yournamehere.Main=org.yournamehere.Main'>-->
         <link rel="stylesheet" type="text/css" href="welcomeGWT.css">
+        <link rel="stylesheet" type="text/css" href="MenuBar.css">
         <title>Main</title>
         <script type="text/javascript"  src="org.yournamehere.Main/org.yournamehere.Main.nocache.js"></script>
+        <!--<script type="text/javascript"  src="org.yournamehere.AjoutJeu/org.yournamehere.AjoutJeu.nocache.js"></script>-->
     </head>
     <body>
-        <iframe src="javascript:''" id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
+        <!--<h1> Titre </h1>-->
+        <!--<iframe src="javascript:''" id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>-->
     </body>
 </html>
