paieEtape 2 paieEtape 3 Ajout d'élément de css pour mise en forme des page paieEtape 2 et 3 Ajout d'une image représentant une mastercard Création de la page pour afficher un article

--- a/web/jsf/paieEtape2.xhtml
+++ b/web/jsf/paieEtape2.xhtml
@@ -28,12 +28,12 @@
             <div id="leftPaie">
                 <h2>Vos adresses</h2>
                 <h:form>
-                    <h:selectOneRadio value="#{AdressView.adress}" layout="pageDirection">
+                    <h:selectOneRadio value="#{AdressView.id}" layout="pageDirection">
                         <c:forEach var="item" items="#{UserView.user.adresses}">
-                            <f:selectItem itemValue="#{item}" itemLabel="#{item}"/>
+                            <f:selectItem itemValue="#{item.id}" itemLabel="#{item}"/>
                         </c:forEach>
                     </h:selectOneRadio>             
-                    <h:commandButton action="null" value="Valider" />
+                    <h:commandButton action="#{AdressView.validAdress()}" value="Valider" />
                 </h:form>
             </div>
             <div id="rightPaie">
