--- a/web/jsf/paieEtape3.xhtml
+++ b/web/jsf/paieEtape3.xhtml
@@ -1,12 +1,69 @@
-<?xml version='1.0' encoding='UTF-8' ?>
+<?xml version='1.0' encoding='UTF-8' ?> 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        <h:outputLabel value="#{AdressView.adress}"/>
-    </h:body>
-</html>
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
+    <h:head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link href="../resources/css/default.css" rel="stylesheet" type="text/css" />
+        <link href="../resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
+        <title>Etape 3 paiement</title>
+    </h:head>
+
+    <h:body>
+
+        <div id="top">
+            <div id="topLeft">
+                <h:graphicImage value="../img/logoEcom.png" />
+            </div>
+        
+            <div id="topRight">
+                Compte -> Adresse -> <strong>Paiement</strong> -> Confirmation
+            </div> 
+        </div>
+        <div>
+            <div id="leftPaie">
+                <h2>Moyen de paiement</h2>
+                <h:form>
+                    <input type="radio" name="g1" value="CB" class="radioButton"/>
+                    <label class='radio'>Carte Bancaire</label>
+                    <h:graphicImage value="../img/mastercard.png" width="30" height="20"/>
+                    <h:graphicImage value="../img/visa.png" width="30" height="20"/><br/>
+                    <input type="radio" name="g1" value="Chèque" class="radioButton"/>       
+                    <label class='radio'>Chèque</label><span id="cheque">Envoyez votre chèque à l'ordre de **********<br/> à l'adresse suivante : 1 rue de la paix 12345 MonopolyLand</span><br/>
+                    <h:commandButton action="null" value="Valider" />
+                </h:form>
+            </div>
+            <div id="rightPaie">
+                <h2>Récapitulatif de votre commande</h2>
+                <h3>Votre panier</h3>
+                <h3>Adresse de livraison</h3>
+                    <label class="form">Nom : </label>
+                    <h:outputText value="#{AdressView.adress.name}" styleClass="form"/>
+                    <label class="form">Prénom : </label>
+                    <h:outputText value="#{AdressView.adress.firstname}" styleClass="form"/>
+                    <label class="form">Adresse : </label>
+                    <h:outputText value="#{AdressView.adress.adress}" styleClass="form"/>
+                    <label class="form">Complément d'adresse : </label>
+                    <h:outputText value="#{AdressView.adress.complement}" styleClass="form"/>
+                    <label class="form">Ville : </label>
+                    <h:outputText value="#{AdressView.adress.city}" styleClass="form"/>
+                    <label class="form">Code postal : </label>
+                    <h:outputText value="#{AdressView.adress.zipCode}" styleClass="form"/>
+                    <label class="form">Téléphone : </label>
+                    <h:outputText value="#{AdressView.adress.phoneNumber}" styleClass="form"/>
+                    <label class="form">Code d'accès : </label>
+                    <h:outputText value="#{AdressView.adress.accessCode}"  styleClass="form"/>
+            </div>
+        </div>
+        <div id="bottomPaie">
+            <h:form>
+                <h:link outcome="/index.xhtml" value="retour a l'index" />
+            </h:form>
+        </div>
+    </h:body>
+
+</html>
