--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -36,7 +36,7 @@
             </h:form>
         </div>
 
-        <h:link outcome="welcomeGWT.html" value="Mon compte" />
+        <a href="/jeu/welcomeGWT.html">Mon compte</a>
     </h:body>
 
 </html>
