Modif CSS pour harmonisation des boutons et liens ajout de la modif css dans les diverses pages concernée ajout d'un champ summary a book

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -32,11 +32,11 @@
         <div id="bottom">
             <ui:insert name="bottom">Bottom</ui:insert>
             <h:form>
-                <h:link outcome="jsf/paieEtape1.xhtml" value="test page paiement" />
+                <h:link outcome="jsf/paieEtape1.xhtml" value="test page paiement" styleClass="bouton"/>
             </h:form>
+            <a href="/jeu/welcomeGWT.html" class="bouton">Mon compte</a>
         </div>
-
-        <a href="/jeu/welcomeGWT.html">Mon compte</a>
+        
     </h:body>
 
 </html>
