--- a/web/jsf/compteConnecte.xhtml
+++ b/web/jsf/compteConnecte.xhtml
@@ -11,9 +11,9 @@
         <h:link value="Ajouter jeu" outcome="/jsf/ajouterJeu"/> <br />
         <h:form>
             Recherche: <h:inputText value="#{ResearchView.search}"/>
-             <h:commandButton action="#{ResearchView.research}" value="Rechercher" />
+             <h:commandButton action="#{ResearchView.research}" value="Rechercher" class="bouton"/>
         </h:form>
-        <h:link value="Retour à l'acceuil" outcome="/index.xhtml"/>
+        <h:link value="Retour à l'acceuil" outcome="/index.xhtml" class="bouton"/>
     </h:body>
 </html>
 
