--- a/web/jsf/paieEtape3.xhtml
+++ b/web/jsf/paieEtape3.xhtml
@@ -34,7 +34,7 @@
                     <h:graphicImage value="../img/visa.png" width="30" height="20"/><br/>
                     <input type="radio" name="g1" value="Chèque" class="radioButton"/>       
                     <label class='radio'>Chèque</label><span id="cheque">Envoyez votre chèque à l'ordre de **********<br/> à l'adresse suivante : 1 rue de la paix 12345 MonopolyLand</span><br/>
-                    <h:commandButton action="null" value="Valider" />
+                    <h:commandButton action="null" value="Valider" class="bouton"/>
                 </h:form>
             </div>
             <div id="rightPaie">
@@ -61,7 +61,7 @@
         </div>
         <div id="bottomPaie">
             <h:form>
-                <h:link outcome="/index.xhtml" value="retour a l'index" />
+                <h:link outcome="/index.xhtml" value="retour a l'index" class="bouton"/>
             </h:form>
         </div>
     </h:body>
