--- a/web/jsf/livreAjoute.xhtml
+++ b/web/jsf/livreAjoute.xhtml
@@ -7,7 +7,7 @@
     </h:head>
     <h:body>
         Votre livre a bien été ajouté <br /> 
-        <h:link value="Retour à l'acceuil" outcome="/index.xhtml"/>
+        <h:link value="Retour à l'acceuil" outcome="/index.xhtml" class="bouton"/>
     </h:body>
 </html>
 
