--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -34,6 +34,9 @@
             <h:form>
                 <h:link outcome="jsf/paieEtape1.xhtml" value="test page paiement" styleClass="bouton"/>
             </h:form>
+            <h:form>
+                <h:commandButton action="#{ResearchView.research()}" value="test pour article" styleClass="bouton"/>
+            </h:form>
             <a href="/jeu/welcomeGWT.html" class="bouton">Mon compte</a>
         </div>
         
