--- a/web/jsf/article.xhtml
+++ b/web/jsf/article.xhtml
@@ -6,15 +6,15 @@
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link href="resources/css/default.css" rel="stylesheet" type="text/css" />
-        <link href="resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
+        <link href="../resources/css/default.css" rel="stylesheet" type="text/css" />
+        <link href="../resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
         <title>Article</title>
     </h:head>
 
     <h:body>
 
         <div id="top">
-            <ui:include src="template/top.xhtml"/>
+            <ui:include src="../template/top.xhtml"/>
         </div>
         <div>
             <div id="left">
