modify account manque adresse

--- a/web/welcomeGWT.html
+++ b/web/welcomeGWT.html
@@ -9,6 +9,7 @@ lead to some differences in layout.
         <!--<meta name='gwt:module' content='org.yournamehere.Main=org.yournamehere.Main'>-->
         <link rel="stylesheet" type="text/css" href="welcomeGWT.css">
         <link rel="stylesheet" type="text/css" href="MenuBar.css">
+        <link rel="stylesheet" type="text/css" href="resources/css/cssLayout.css">
         <title>Main</title>
         <script type="text/javascript"  src="org.yournamehere.Main/org.yournamehere.Main.nocache.js"></script>
         <!--<script type="text/javascript"  src="org.yournamehere.AjoutJeu/org.yournamehere.AjoutJeu.nocache.js"></script>-->
