--- a/web/jsf/article.xhtml
+++ b/web/jsf/article.xhtml
@@ -27,7 +27,11 @@
                 </div>
                 <div id="content" class="right_content">
                     <!--<ui:insert name="content">Informations sur l'article</ui:insert>-->
-                    <h:outputText value="#{DynamicView.test}"/><br/>
+                    <h:outputText value="liste des methodes get"/><br/>
+                    <c:forEach var="item" items="#{DynamicView.test}">
+                        <h:outputText value="#{item}"/><br/>
+                    </c:forEach>
+                        
                     <h:outputText value="affichage des methode et de leur retour"/><br/>
                     <c:forEach var="item" items="#{DynamicView.informations}">
                         <h:outputText value="methode"/><br/>
