--- a/web/jsf/recherche.xhtml
+++ b/web/jsf/recherche.xhtml
@@ -1,31 +1,50 @@
-<?xml version='1.0' encoding='UTF-8' ?>
+<?xml version='1.0' encoding='UTF-8' ?> 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+
     <h:head>
-        <title>Facelet Title</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link href="../resources/css/default.css" rel="stylesheet" type="text/css" />
+        <link href="../resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
+        <title>Article</title>
     </h:head>
+
     <h:body>
-        Résultats de la recherche:
-        <h:outputText value="#{ResearchView.research()}"/>
-        <ul>
-            <c:forEach var="item" items="#{ResearchView.test()}">
-                <li>
-                    <h:outputText value="#{item}"/>
-                    <h:outputText value="#{item.class.getName()}"/>
-                    <h:form>
-                        <h:outputText value="#{DynamicView.setIdArticle(item.id)}"/>
-                        <h:outputText value="#{item.id}"/>
-                        <h:outputText value="#{DynamicView.idArticle}"/>
-                        <h:outputText value="#{DynamicView.setNomArticle(item.name)}"/>
-                        <h:outputText value="#{DynamicView.setNomClasseBean(item.class.getName())}"/>
-                        <h:commandButton action="#{DynamicView.createPage}" value="test"/>
-                    </h:form>
-                </li>
-            </c:forEach>
-        </ul>
-        AAAAAAAAAAAAAAAAAAAAAAAAAAA
+
+        <div id="top">
+            <ui:include src="../template/top.xhtml"/>
+        </div>
+        <div>
+            <div id="left">
+                <ui:insert name="left">Catégorie de recherche</ui:insert>
+            </div>
+            <div>
+                <div id="right">
+                    <ui:insert name="right">Liste d'articles</ui:insert>
+                </div>
+                <div id="content" class="right_content">
+                    <h2>Résultats de la recherche:</h2>
+                    <ul>
+                        <c:forEach var="titre" items="#{ResearchView.nodeList}">
+                            <h3><h:outputText value="#{titre.nomClass}"/></h3>
+                            <c:forEach var="item" items="#{titre.listeRetour}">
+                                <li>
+                                    <h:form>
+                                        <h:commandLink action="#{DynamicView.createPage(item.id, item.toString(), item.class.getName())}" value="#{item.toString()}"/>
+                                    </h:form>
+                                </li>
+                            </c:forEach>
+                        </c:forEach>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div id="bottom">
+            <ui:insert name="bottom">Bottom</ui:insert>
+        </div>
     </h:body>
 </html>
 
