--- a/web/jsf/article.xhtml
+++ b/web/jsf/article.xhtml
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div id="bottom">
-            <ui:insert name="bottom">Bottom</ui:insert>
+            <h:link value="Retour à l'acceuil" outcome="/index.xhtml" class="bouton"/>
         </div>
     </h:body>
 </html>
